tests/snapshots/bridge_snapshot_exhaustive__edge_cases__edge_special_chars_gemini.snap
---
source: tests/bridge_snapshot_exhaustive.rs
expression: "&content"
---
{
  "role": "user",
  "parts": [
    {
      "text": "Special chars: <>&\"'\n\t\r\\/ \u0000 ￿ 日本語 émojis 🎉🚀"
    }
  ]
}
