tests/snapshots/bridge_snapshot_exhaustive__edge_cases__edge_unicode_gemini.snap
---
source: tests/bridge_snapshot_exhaustive.rs
expression: "&gemini"
---
{
  "role": "user",
  "parts": [
    {
      "text": "こんにちは世界 🌍 Ñoño café résumé naïve"
    }
  ]
}
