tests/snapshots/bridge_snapshot_exhaustive__edge_cases__edge_unicode_openai.snap
---
source: tests/bridge_snapshot_exhaustive.rs
expression: "&openai"
---
{
  "role": "user",
  "content": "こんにちは世界 🌍 Ñoño café résumé naïve"
}
